--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -15,11 +15,8 @@ server {
     # Custom 404 page
     error_page 404 /404.html;
 
-    # Include component config parts
-    include conf/expires.conf;
-    include conf/x-ua-compatible.conf;
-    include conf/cross-domain-fonts.conf;
-    include conf/protect-system-files.conf;
+    # Include basic configuration
+    include h5bp/basic.conf;
 
     location / {
         try_files $uri $uri/ /index.php;
